# Tracking_and_stabilization

./: CMakeLists.txt  cap_test.cpp  harris_detection_contours.cpp  joseboveDist
arduino/: serialzqsd.c  wasd
arduino/arduinozqsd/: serialconversion_ino.ino
arduino/arduinozqsd/sketch_nov10a/serialconversion_ino/: serialconversion_ino.ino
arduino/src/: main.cpp
